ER9x changelog
Please insert a short description of a change by inserting it below this header and 
above the previous change.

Format is as follows:
******************************************
CHANGELOG: 1-11-2011
description here
====================================================================================


******************************************
CHANGELOG: 8-1-2012  MPB
Frsky telemetry internal alarm scheduling
Frsky telemetry GPS Altitude display
DSM protocol implementation (Pat Mackenzie)
Fix default owner name and model name settings

******************************************
CHANGELOG: 7-1-2012 
Frsky telemetry fix

******************************************
CHANGELOG: 7-1-2012 
Added "Splash" marker to help eePe find the splash screen data
NEMA Changes

******************************************
CHANGELOG: 22-12-2011 MPB
Fix A2 on altitude telemetry display bug

******************************************
CHANGELOG: 1-12-2011 MPB
Add A2 to altitude telemetry display, improve bandgap A2d reading

******************************************
CHANGELOG: 01-12-2011 RFT
Cleaned up menus.cpp in relation to frsky yel/org/red option displays.

******************************************
CHANGELOG: 22-11-2011 MPB
Fix WsHowHi metric/imperial bug

******************************************
CHANGELOG: 22-11-2011 RFT
Audio option to enable 'just haptic' alerts to work
Added haptic to frsky alerts menu

******************************************
CHANGELOG: 21-11-2011 MPB
Re-arrange FrSky telemetry structures
Add FrSky battery capacity used function
Fix DSM2 problems, improve pulse generation interrupt latency

******************************************
CHANGELOG: 21-11-2011 RFT
Updated audio.cpp & audio.h to include the fancy frsky alert souunds
Updated menu.cpp to show menu for fancy sounds
Updated audio.cpp to fix an issue with sound playback when running the sound interupt function

******************************************

